src/objects/Activity.object
<CustomObject>
    <fields>
        <fullName>Access_to_Direct_Mail__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Access to Direct Mail?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Access_to_Employee_Emails__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Access to Employee Emails?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Activities_Success_Criteria__c</fullName>
        <label>Activities / Success Criteria</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Assigned_Title__c</fullName>
        <formula>Owner:User.Title</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Assigned Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Attendance_Required__c</fullName>
        <label>Attendance Required</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Benefits_Consultant__c</fullName>
        <label>Benefits Consultant(s)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Billing_Method__c</fullName>
        <label>Billing Method</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Direct to Employer</fullName>
                </value>
                <value>
                    <fullName>Direct to TPA/ASO</fullName>
                </value>
                <value>
                    <fullName>Medical Claims TPA/ASO</fullName>
                </value>
                <value>
                    <fullName>Direct Through Partner</fullName>
                </value>
                <value>
                    <fullName>Through PBM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Call_Result__c</fullName>
        <label>Result</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Prospecting Task (not yet completed)</fullName>
                </value>
                <value>
                    <fullName>Direct Mail Sent</fullName>
                </value>
                <value>
                    <fullName>Wrong Number</fullName>
                </value>
                <value>
                    <fullName>Wrong Contact</fullName>
                </value>
                <value>
                    <fullName>Busy</fullName>
                </value>
                <value>
                    <fullName>Left Message</fullName>
                </value>
                <value>
                    <fullName>No answer</fullName>
                </value>
                <value>
                    <fullName>Contact - Completed Conversation / Expressed Interest</fullName>
                </value>
                <value>
                    <fullName>Contact – Completed Conversation / Meeting Set</fullName>
                </value>
                <value>
                    <fullName>Contact – Completed Conservation / Unofficial Meeting</fullName>
                </value>
                <value>
                    <fullName>Contact - Not Interested</fullName>
                </value>
                <value>
                    <fullName>Contact - Call Back Later</fullName>
                </value>
                <value>
                    <fullName>Contact - Send Information</fullName>
                </value>
                <value>
                    <fullName>Email Sent</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Client_Health_Plan_s__c</fullName>
        <label>Client Health Plan(s)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Company_Overview__c</fullName>
        <label>Company Overview</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Cost_of_Supplies__c</fullName>
        <label>Cost of Supplies</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Estimated_PwDs__c</fullName>
        <label>Estimated PwDs</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Event_Address__c</fullName>
        <label>Event Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Event_Detail_Text__c</fullName>
        <label>Event Detail Text</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Event_Materials__c</fullName>
        <label>Event Materials</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Event Kit</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
                <value>
                    <fullName>Printed Assets</fullName>
                </value>
                <value>
                    <fullName>Swag</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Event_State__c</fullName>
        <label>Event State</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Alabama</fullName>
                </value>
                <value>
                    <fullName>Alaska</fullName>
                </value>
                <value>
                    <fullName>Arizona</fullName>
                </value>
                <value>
                    <fullName>Arkansas</fullName>
                </value>
                <value>
                    <fullName>California</fullName>
                </value>
                <value>
                    <fullName>Colorado</fullName>
                </value>
                <value>
                    <fullName>Connecticut</fullName>
                </value>
                <value>
                    <fullName>Delaware</fullName>
                </value>
                <value>
                    <fullName>Florida</fullName>
                </value>
                <value>
                    <fullName>Georgia</fullName>
                </value>
                <value>
                    <fullName>Hawaii</fullName>
                </value>
                <value>
                    <fullName>Idaho</fullName>
                </value>
                <value>
                    <fullName>Illinois</fullName>
                </value>
                <value>
                    <fullName>Indiana</fullName>
                </value>
                <value>
                    <fullName>Iowa</fullName>
                </value>
                <value>
                    <fullName>Kansas</fullName>
                </value>
                <value>
                    <fullName>Kentucky</fullName>
                </value>
                <value>
                    <fullName>Louisiana</fullName>
                </value>
                <value>
                    <fullName>Maine</fullName>
                </value>
                <value>
                    <fullName>Maryland</fullName>
                </value>
                <value>
                    <fullName>Massachusetts</fullName>
                </value>
                <value>
                    <fullName>Michigan</fullName>
                </value>
                <value>
                    <fullName>Minnesota</fullName>
                </value>
                <value>
                    <fullName>Mississippi</fullName>
                </value>
                <value>
                    <fullName>Missouri</fullName>
                </value>
                <value>
                    <fullName>Montana</fullName>
                </value>
                <value>
                    <fullName>Nebraska</fullName>
                </value>
                <value>
                    <fullName>Nevada</fullName>
                </value>
                <value>
                    <fullName>New Hampshire</fullName>
                </value>
                <value>
                    <fullName>New Jersey</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Expected_Attendance__c</fullName>
        <label>Expected Attendance</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0 - 100</fullName>
                </value>
                <value>
                    <fullName>101 - 250</fullName>
                </value>
                <value>
                    <fullName>251 - 500</fullName>
                </value>
                <value>
                    <fullName>501 - 750</fullName>
                </value>
                <value>
                    <fullName>751 - 1000</fullName>
                </value>
                <value>
                    <fullName>1001 - 1500</fullName>
                </value>
                <value>
                    <fullName>1501 - 2000</fullName>
                </value>
                <value>
                    <fullName>2001 - 2500</fullName>
                </value>
                <value>
                    <fullName>2501 - 3000</fullName>
                </value>
                <value>
                    <fullName>&gt;3000</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Include_in_weekly_call_review__c</fullName>
        <defaultValue>false</defaultValue>
        <description>FOR USE BY INSIDE SALES</description>
        <inlineHelpText>FOR USE BY INSIDE SALES</inlineHelpText>
        <label>Include in weekly call review?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Internal_External_Tags__c</fullName>
        <label>Internal/External Tags</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Internal</fullName>
                </value>
                <value>
                    <fullName>External</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Internal_Livongo_Rep__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Which rep did you have the meeting with?</inlineHelpText>
        <label>Internal Livongo Rep</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Key_Contacts_Name_Title_Email_Phone__c</fullName>
        <label>Key Contacts (Name/Title/Email/Phone)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>LID__Date_Sent__c</fullName>
        <label>Date Sent</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LID__URL__c</fullName>
        <label>URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Meeting_Status__c</fullName>
        <label>Meeting Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Set</fullName>
                    <default>true</default>
                    <label>Set</label>
                </value>
                <value>
                    <fullName>Ran</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Meeting_Type__c</fullName>
        <label>Meeting Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Introduction - First Meeting/Demo</fullName>
                </value>
                <value>
                    <fullName>ROI Discussion / Business Case</fullName>
                </value>
                <value>
                    <fullName>Clinical Review</fullName>
                </value>
                <value>
                    <fullName>Implementation Review</fullName>
                </value>
                <value>
                    <fullName>Technical Review / Info Security</fullName>
                </value>
                <value>
                    <fullName>Legal Review</fullName>
                </value>
                <value>
                    <fullName>Kickoff Meeting</fullName>
                </value>
                <value>
                    <fullName>Lunch and Learn</fullName>
                </value>
                <value>
                    <fullName>Coffee Hour</fullName>
                </value>
                <value>
                    <fullName>Innovation Event</fullName>
                </value>
                <value>
                    <fullName>Additional/Other Meeting</fullName>
                </value>
                <value>
                    <fullName>Training</fullName>
                </value>
                <value>
                    <fullName>Coaching</fullName>
                </value>
                <value>
                    <fullName>Prospecting Review</fullName>
                </value>
                <value>
                    <fullName>Opportunity Review</fullName>
                </value>
                <value>
                    <fullName>Activity Review</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Happy Hour</fullName>
                </value>
                <value>
                    <fullName>Reference Call</fullName>
                </value>
                <value>
                    <fullName>Vendor Summit</fullName>
                </value>
                <value>
                    <fullName>Health Fair / Benefit Fair</fullName>
                </value>
                <value>
                    <fullName>CS - Meeting</fullName>
                </value>
                <value>
                    <fullName>CS - Ad Hoc</fullName>
                </value>
                <value>
                    <fullName>CS - Call</fullName>
                </value>
                <value>
                    <fullName>CS - Business Review</fullName>
                </value>
                <value>
                    <fullName>CS - Renewal Meeting</fullName>
                </value>
                <value>
                    <fullName>CS - Transition Meeting</fullName>
                </value>
                <value>
                    <fullName>CS - Update</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Method_of_outreach__c</fullName>
        <label>Method of outreach</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Phone Call</fullName>
                </value>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>LinkedIn Message</fullName>
                </value>
                <value>
                    <fullName>Direct Mail</fullName>
                </value>
                <value>
                    <fullName>Face-to-Face Networking</fullName>
                </value>
                <value>
                    <fullName>Other outreach</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MigratedmyStrengthActivity__c</fullName>
        <defaultValue>false</defaultValue>
        <label>MigratedmyStrengthActivity</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Migration_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>Migration ID</label>
        <length>40</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Navigator__c</fullName>
        <label>Navigator</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>PBM_Partner__c</fullName>
        <label>PBM Partner</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>PFLSFTMA__Failed_TMA_Transaction_Id__c</fullName>
        <label>@Deprecated</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PFLSFTMA__Order_Number__c</fullName>
        <description>Order Number for PFL product order.</description>
        <label>Order Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PFLSFTMA__TMA_Reason__c</fullName>
        <label>TMA Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PFLSFTMA__TMA_Transaction_Id__c</fullName>
        <label>@Deprecated</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PFLSFTMA__Task_Type__c</fullName>
        <description>Denotes whether a task is Send Swag Task or Default Task.</description>
        <label>Task Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Default Task</fullName>
                    <default>true</default>
                    <label>Default Task</label>
                </value>
                <value>
                    <fullName>Send Swag Task</fullName>
                </value>
                <value>
                    <fullName>Swag Delivered Task</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Playbooks_Call_Date__c</fullName>
        <description>Stores date &amp; time of the call</description>
        <inlineHelpText>Date &amp; time of the call</inlineHelpText>
        <label>Playbooks Call Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Playbooks_Call_Hour__c</fullName>
        <description>Stores the hour the call was placed in the prospect&apos;s time</description>
        <inlineHelpText>Stores the hour the call was placed in the prospect&apos;s time</inlineHelpText>
        <label>Playbooks Call Hour</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Playbooks_Call_Recording__c</fullName>
        <description>A link to the call recording of that specific call</description>
        <inlineHelpText>A link to the call recording of that specific call</inlineHelpText>
        <label>Playbooks Call Recording</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Playbooks_Play_Name__c</fullName>
        <description>Stores the name of the play a record is currently enrolled in</description>
        <inlineHelpText>The name of the play a record is currently enrolled in</inlineHelpText>
        <label>Playbooks Play Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Playbooks_Step_Email_Link_Click_Count__c</fullName>
        <description>Shows the number of times the recipient clicked on the link on the Playbooks email.</description>
        <label>Playbooks Step Email Link Click Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Playbooks_Step_Email_Link_Clicked_Data__c</fullName>
        <description>Data about link clicks in Playbooks.</description>
        <label>Playbooks Step Email Link Clicked Data</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Playbooks_Step_Email_Link_Clicked__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checkbox that shows if the recipient clicked on a link on the Playbooks email.</description>
        <label>Playbooks Step Email Link Clicked</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Playbooks_Step_Email_Open_Count__c</fullName>
        <description>Number of times the record has opened an email from Playbooks.</description>
        <label>Playbooks Step Email Open Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Playbooks_Step_Email_Opened__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checkbox that indicates if the email from Playbooks has been opened.</description>
        <label>Playbooks Step Email Opened</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Playbooks_Step_Email_Replied__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checkbox that shows if the email from Playbooks was replied to.</description>
        <label>Playbooks Step Email Replied</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Playbooks_Step_Email_Reply_Count__c</fullName>
        <description>Shows the number of replies from the original email sent.</description>
        <label>Playbooks Step Email Reply Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Playbooks_Step_Email_Template_Name__c</fullName>
        <description>The name of the email template for this step in the Play.</description>
        <label>Playbooks Step Email Template Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Playbooks_Step_Number__c</fullName>
        <description>Stores the step number a play was on when the activity was completed</description>
        <inlineHelpText>The step number the activity was completed on</inlineHelpText>
        <label>Playbooks Step Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Playbooks_Step_Success__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field will be checked off when a user selects &quot;Success&quot; on the Play, in Playbooks.</description>
        <label>Playbooks Step Success</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Playbooks_Step_Type__c</fullName>
        <description>Stores the type of step for the task (phone, email, other)</description>
        <inlineHelpText>The type of step for the task (phone, email, other)</inlineHelpText>
        <label>Playbooks Step Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Products_Pitched__c</fullName>
        <label>Products Pitched</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>CV Solution</fullName>
                </value>
                <value>
                    <fullName>DM Solution</fullName>
                </value>
                <value>
                    <fullName>DP Solution</fullName>
                </value>
                <value>
                    <fullName>Livongo for Diabetes</fullName>
                </value>
                <value>
                    <fullName>Livongo for Hypertension</fullName>
                </value>
                <value>
                    <fullName>Livongo DPP Powered by Retrofit</fullName>
                </value>
                <value>
                    <fullName>Livongo for Weight Management</fullName>
                </value>
                <value>
                    <fullName>Livongo for Behavioral Health</fullName>
                </value>
                <value>
                    <fullName>Not applicable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Prospecting_or_Pipeline_Acceleration__c</fullName>
        <label>Prospecting or Pipeline Acceleration?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Prospecting</fullName>
                </value>
                <value>
                    <fullName>Pipeline Acceleration</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RT1__ReadytalkAttendanceID__c</fullName>
        <externalId>true</externalId>
        <label>Readytalk Attendance ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Target_Contract_Date__c</fullName>
        <label>Target Contract Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Target_Launch_Date__c</fullName>
        <label>Target Launch Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Telephonic_or_F2F__c</fullName>
        <label>Telephonic or F2F?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Telephonic/WebEx</fullName>
                </value>
                <value>
                    <fullName>Face-to-Face</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Total_Diabetes_Spend__c</fullName>
        <label>Total Diabetes Spend</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_H_C_Spend__c</fullName>
        <label>Total H/C Spend</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Lives__c</fullName>
        <label># Total Lives</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Wellness_Partner__c</fullName>
        <label>Wellness Partner</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>of_Employees__c</fullName>
        <label># of Employees</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>qbdialer__CallRecordingURL__c</fullName>
        <description>Link to the call recording</description>
        <label>Call Recording</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>qbdialer__Call_Date_Time__c</fullName>
        <label>Call Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>qbdialer__Call_Dial_Number__c</fullName>
        <description>Total number of dials on the record being called</description>
        <label>Call Dial Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>qbdialer__Call_Hour__c</fullName>
        <description>Hour in which the call was placed from the record&apos;s perspective</description>
        <label>Call Hour</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>qbdialer__Call_Lead_Status__c</fullName>
        <description>Lead Status of the record called</description>
        <label>Call Lead Status</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>qbdialer__Call_Ring_Time__c</fullName>
        <description>Ring Time of the phone call</description>
        <label>Call Ring Time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>qbdialer__Call_Time_Zone__c</fullName>
        <description>Time zone of the number being called</description>
        <label>Call Time Zone</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>qbdialer__Callback_Date_Time__c</fullName>
        <label>Callback Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>qbdialer__ImpressionId__c</fullName>
        <externalId>true</externalId>
        <label>Impression ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>qbdialer__SMSReminder__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Text message reminders will be sent to all attendees at the set reminder time.</inlineHelpText>
        <label>Send text msg reminder to all attendees</label>
        <type>Checkbox</type>
    </fields>
    <listViews>
        <fullName>MyActivities</fullName>
        <columns>ACTIVITY_SUBTYPE</columns>
        <columns>TASK.STATUS</columns>
        <columns>TASK.SUBJECT</columns>
        <columns>TASK.DUE_DATE</columns>
        <columns>TASK.WHAT_NAME</columns>
        <columns>TASK.WHO_NAME</columns>
        <columns>EVENT.LOCATION</columns>
        <filterScope>Mine</filterScope>
        <label>My Activities</label>
    </listViews>
    <listViews>
        <fullName>MyDelegatedActivities</fullName>
        <filterScope>Delegated</filterScope>
        <label>My Delegated Activities</label>
    </listViews>
    <listViews>
        <fullName>MyTeamsActivities</fullName>
        <filterScope>Team</filterScope>
        <label>My Team&apos;s Activities</label>
    </listViews>
    <listViews>
        <fullName>TodaysTasks</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>TASK.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>lessThan</operation>
            <value>TOMORROW</value>
        </filters>
        <label>Today&apos;s Tasks</label>
    </listViews>
    <listViews>
        <fullName>UpcomingEvents</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>greaterThan</operation>
            <value>YESTERDAY</value>
        </filters>
        <label>Upcoming Events</label>
    </listViews>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>